--- a/templates/schedule_selection.html
+++ b/templates/schedule_selection.html
@@ -71,7 +71,8 @@
                     <ul>
                         <li>Can work 7 days across week boundaries</li>
                         <li>Must start on Sunday to minimize OT</li>
-                        <li>Complex initially to understand</li>
+                        <li>Short stretches of nights difficult to adjust to</li>
+                        <li>Longest break is only 3 days</li>
                     </ul>
                 </div>
             </div>
